# Dissolvechat

./: .continue-here.md  .env.example  .gitignore  ABUSE_POLICY.md  DEPLOYMENT.md  Dockerfile.client  LICENSE  ONE_PAGER.md  PERSISTENCE.md  PROTOCOL.md  README.md  ROADMAP.md  SECURITY_TEST_RESULTS.md  SELF_HOSTING.md  SMOKE_TEST_CHECKLIST.md  STABILITY_CHECKLIST.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.js
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  feedback.yml
.github/workflows/: release.yml
.planning/: .continue-here.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  config.js  fonts.css
desktop/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
desktop/src/: App.css  App.jsx  config.js  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: USER_GUIDE.md
docs/plans/: 2026-02-27-ui-polish-design.md  2026-02-27-ui-polish-implementation.md  2026-03-03-landing-page-design.md  (+14 more)
landing/: index.html  netlify.toml  script.js  style.css
mobile/: app.json  eas.json  metro.config.js  package.json  tsconfig.json
nginx/: dissolve.conf
server/: Dockerfile  directory.json  package-lock.json  package.json  test-flow.js
test/: integration.js
(+152 files in other folders)
