[package]
name = "dissolvechat-desktop"
version = "5.13.0"
description = "DissolveChat — E2EE messenger with capability-based routing"
authors = ["DissolveChat"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
